# aind-analysis-framework-viz

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/skills/: aind-infrastructure.md  panel-architecture.md
.claude/skills/aind-infrastructure/: SKILL.md
.claude/skills/panel-architecture/: SKILL.md
.github/: README.md
code/: __init__.py  app.py  config.py  run_capsule.py
code/components/: __init__.py  asset_viewer.py  base.py  color_mapping.py  column_selector.py  data_table.py  docdb_query.py  filter_panel.py  log_console.py  pair_plot.py  scatter_plot.py  sidebar.py  size_mapping.py
code/config/: __init__.py  models.py  projects.py
code/core/: __init__.py  base_app.py
code/data/: __init__.py  loaders.py
code/tests/: test_config.py
code/utils/: __init__.py  url_state.py
