[project]
name = "aind-analysis-framework-viz"
version = "0.1.0"
description = "Panel app for exploring AIND analysis results"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "panel>=1.3.0",
    "bokeh>=3.3.0",
    "param>=2.0.0",

    # Data access
    "s3fs>=2024.1.0",
    "aind-data-access-api>=0.1.0",
    "aind-analysis-arch-result-access>=0.1.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",

    # Utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
